--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @import url('https://geistfont.vercel.app/geist.css');
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "highlight.js/styles/github-dark.css";
 
 @plugin "tailwindcss-animate";
 
